--- a/styles.css
+++ b/styles.css
@@ -3,27 +3,54 @@
     --blanco: #ffffff;
     --negro:#212121;
     --primario: #ffc107;
-    --secundario: #0097a7;
+    --secundario: #4630ea;
     --gris: #757575;
-
+    --grisclaro: #DFE9F3;
 
 }
+
 html{
     font-size: 62.5%;
 }
 
+*,*:before, *:after{
+    box-sizing: inherit;
+}
+
 body{
-    font-size: 16px;
+    font-size: 16px; /* 1 rem = 10 px*/
     font-family: "Krub", sans-serif;
+    background-image: linear-gradient(to top,var(--grisclaro) 0%, var(--blanco) 100%); /* aplicarle un degradado al elemento*/
 }
 
-.titulo{
-    text-align: center;
+.sombra{
+    -webkit-box-shadow: 0px 5px 15px 0px rgba(112,112,112,0.54);
+    -moz-box-shadow:  0px 5px 15px 0px rgba(112,112,112,0.54);
+    box-shadow:  0px 5px 15px 0px rgba(112,112,112,0.54);
+    background-color: var(--blanco);
+    padding: 2rem;
+}
+
+/* tipografía*/
+h1{
     font-size: 3.8rem;
-    font-family: Arial, Helvetica, sans-serif;
-    
 
 }
+
+h2{
+    font-size: 2.8rem;
+}
+
+h3{
+    font-size: 1.8rem;
+
+}
+
+h1,h2,h3{
+    text-align: center;
+}
+
+/*Títulos*/
 
 .titulo span{
     font-size: 2rem;
@@ -31,13 +58,104 @@ body{
 
 .contenedor{
 
-    width: 120rem;
+    max-width: 120rem;
     margin-top: 0;
     margin-right: auto;
     margin-left: auto;
     margin-bottom: 0;
 }
-.navegacion-principal{
+
+.boton{
+    background-color: var(--blanco);
+    color: var(--negro);
+    padding: 1rem, 3rem;
+    margin-top: 1rem;
+    text-decoration: none;
+    text-transform: uppercase;
+    border-radius: .5rem;
+    width: 50rem;
+    text-align: center;
+
+}
+
+@media (min-widht: 480px){
+    .boton{
+        width: auto;
+    }
+}
+
+.nav-bag{
 
     background-color: var(--secundario);
+}
+.navegacion-principal{
+
+    
+    display: flex;
+    flex-direction: column;
+    
+    
+}
+
+@media (min-width: 480px){
+    .navegacion-principal{
+        flex-direction: row;
+        justify-content: space-between;
+
+    }
+}
+
+.navegacion-principal a{ 
+
+    display: block;
+    text-align: center;
+    color: var(--blanco);
+    text-decoration: none;
+    font-size: 2rem;
+    font-weight: 700;
+    padding: 1rem;
+
+}
+
+.navegacion-principal a:hover{
+    background-color: var(--primario);
+    color: var(--oscuro);
+}
+
+.jaime{
+    background-image: url(jaime.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 45rem;
+    padding: 2 rem;
+    position: relative;
+    margin-bottom: 2rem;
+    border-radius: 1rem;
+    
+
+}
+
+.contenido-jaime{
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.3);
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.contenido-jaime h2, .contenido-jaime p{
+    color: var(--blanco);
+    
+}
+
+@media (min-width: 768px){
+    .servicios{
+        display: grid;
+        grid-template-columns: 33.3% 33.3% 33.3%;
+        margin-top: 2rem;
+    
+    }
 }
