--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,9 @@
 
 html{
     font-size: 62.5%;
+    box-sizing:border-box; /*hack para box model*/
+
+    scroll-snap-type: y mandatory;
 }
 
 *,*:before, *:after{
@@ -33,7 +36,7 @@ body{
 
 /* tipografía*/
 h1{
-    font-size: 3.8rem;
+    font-size: 2.8rem;
 
 }
 
@@ -55,6 +58,26 @@ h1,h2,h3{
 .titulo span{
     font-size: 2rem;
 }
+/*utilidades*/
+.w-100{
+    width: 100%;
+}
+
+@media (min-width: 768px){
+    .w-100{
+        width: auto;
+    }
+}
+
+.flex{
+    display: flex;
+}
+
+.alinear-derecha{
+    justify-content: flex-end;
+}
+
+
 
 .contenedor{
 
@@ -73,7 +96,7 @@ h1,h2,h3{
     text-decoration: none;
     text-transform: uppercase;
     border-radius: .5rem;
-    width: 50rem;
+    width: 30rem;
     text-align: center;
 
 }
@@ -126,7 +149,7 @@ h1,h2,h3{
     background-image: url(jaime.png);
     background-repeat: no-repeat;
     background-size: cover;
-    height: 45rem;
+    height: 60rem;
     padding: 2 rem;
     position: relative;
     margin-bottom: 2rem;
@@ -151,11 +174,107 @@ h1,h2,h3{
     
 }
 
+.servicios .navegacion-principal{
+    scroll-snap-align: center;
+    scroll-snap-stop: always;
+}
+
 @media (min-width: 768px){
     .servicios{
         display: grid;
         grid-template-columns: 33.3% 33.3% 33.3%;
-        margin-top: 2rem;
+        column-gap: 1rem;
+
     
     }
+}
+
+.servicio{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.servicio h3{
+    margin: 1rem 0;
+    color: var(--secundario);
+}
+.servicio p{
+    line-height: 2;
+}
+
+.servicio .icono{
+    height: 15rem;
+    width: 15rem;
+    background-color: var(--primario);
+    border-radius: 50%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+/* formulario contacto*/
+
+.formulario{
+    background-color: var(--gris);
+    width: min(60rem, 100%); /*Utilizar el valor más pequeño*/
+    margin: 0 auto;
+    padding: 2rem;
+}
+
+.formulario fieldset{
+    border: none;
+}
+
+.formulario legend{
+    text-align: center;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin-bottom: 2rem;
+    color : var(--primario);
+}
+
+@media (min-width: 768px){
+    .contenedor-campos{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr); /* dos columnas de igual tamaño*/
+        column-gap: 3rem;
+
+    }
+}
+
+.campos:nth-child(3),
+.campos:nth-child(4){
+    /* para que ocupe las dos columnas*/
+    grid-column: 1 / 3; /* ocupará las dos columnas*/
+}
+
+.campos{
+ margin-bottom: 1rem;   
+}
+
+.campos label{
+    display: block;
+    font-size: 1.6rem;
+    font-weight: bold;
+    margin-bottom: .5rem;
+}
+
+.campos textarea{
+    height: 20rem;
+}
+
+.input-text{
+    width: 100%;
+    padding: 1rem;
+    border: none;
+    border-radius: .5rem;
+
+}
+
+/*clase footer*/
+
+.footer{
+    text-align: center;
 }
